Revert "fix spacings of nearby places"
This reverts commit 1c11350c7c3d2cd0cfa0c62e39270e0b75009eb5.

--- a/scss/_list_homes.scss
+++ b/scss/_list_homes.scss
@@ -777,18 +777,13 @@ figure.lh-img-holder {
     font-size:16px;
   }
   .stars-reviews {
-    display: flex;
-    align-items: center;
-    height: 50px;
+    margin-top: -15px;
     i {
       color: $main-color;
-      padding-right: .5em;
     }
     span {
       font-size: .9rem;
-      font-weight: lighter;
       color:  #a8b6c6;
-      padding-left: 1em;
     }
   }
 }
